--- a/signup.html
+++ b/signup.html
@@ -3,47 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Cool Website</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to CSS -->
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body onload="checkUser()">
+<body>
 
-  <!-- Wavell Button -->
-  <button class="wavell-button" onclick="window.open('https://connect.wavellshs.eq.edu.au/', '_blank')">Wavell</button>
-
-  <!-- Personal Button (Sign-up) -->
-  <button id="personal-button" class="personal-button" onclick="window.location.href='signup.html'">Personal</button>
-
-  <!-- User Profile (Hidden by Default) -->
-  <div id="user-profile" class="user-profile">
-    <span id="user-initial"></span>
-    <div id="user-info"></div>
+  <div class="signup-container">
+    <h2>Create an Account</h2>
+    <form id="signup-form" onsubmit="return validateForm()">
+      <input type="text" id="username" placeholder="Username" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Create Account</button>
+      <p id="error-message" style="color: red; display: none;"></p>
+    </form>
   </div>
 
-  <!-- Main Container -->
-  <div class="container">
-    
-    <!-- Left Side (Search & Buttons) -->
-    <div class="left-section">
-      <h1>Hello!</h1>
-
-      <div class="search-container">
-        <input type="text" id="search-input" placeholder="Search...">
-        <button onclick="searchGoogle()">Search</button>
-      </div>
-
-      <!-- Story Button -->
-      <button class="story-button" id="story-button" onclick="toggleStory()">Story</button>
-    </div>
-
-    <!-- Right Side (Story) -->
-    <div class="right-section" id="story-box">
-      <h2>🔥 The Journey of a Dreamer 🔥</h2>
-      <p>Once upon a time...</p>
-    </div>
-
-  </div>
-
-  <script src="script.js"></script> <!-- Link to JavaScript -->
+  <script src="script.js"></script>
 </body>
 </html>
